2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Give |list-style-image|'s compute function a name.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Give |list-style-image|'s parser a name.  Bug fix
	on base URI scalar reference.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (page-break-before, page-break-after, page-break-inside, 
	orphans, widows, list-style): Added.
	(z-index): Support for negative values.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Set |manakai_base_uri| attribute of the 
	created |CSSStyleSheet| object.
	More properties from CSS 2.1 are implemented.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm: The |use strict| line was missing!!!!!!!!!11
	(get_computed_value): Support for the |inherit| value.

	* Parser.pm: The |inherit| value is represented by new |INHERIT|
	value type, rather than |KEYWORD|.
	(position): The initial value was incorrect.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm (get_cascaded_value): It now should return |undef|
	for shorthand properties.
	(get_specified_value, get_computed_value): New methods.

	* Parser.pm: |initial|, |inherited|, and |compute| properties
	are added to property definitions.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm: Specificity and priority are now supported.

	* Parser.pm (get_selector_specificity): New method.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm: New Perl module.

	* Parser.pm: |@namespace| prohibbitted immediately
	following |@namespace| rules by mistake.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Support for border-style properties, as a model case
	for shorthand properties.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Ignore property which is not supported by the
	application.  Support for properties with a keyword being
	able to be specified is added.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: At-keywords were not case-insensitive.